--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -50,12 +51,17 @@
           animation: subtle-pulse 3s ease-in-out infinite;
         }
     </style>
+<script>
+    // Shim process.env for browser compatibility
+    window.process = { env: { API_KEY: '' } };
+</script>
 <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "idb-keyval": "https://esm.sh/idb-keyval@6.2.1"
   }
@@ -64,5 +70,7 @@
 </head>
 <body>
     <div id="root"></div>
+    <!-- The missing module script tag -->
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
